--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^3.9.1",
     "@tanstack/react-query": "^5.62.0",
     "@tanstack/react-query-devtools": "^5.62.0",
+    "cloudinary": "^2.5.1",
     "json-server": "^1.0.0-beta.3",
     "next": "15.1.2",
     "react": "^19.0.0",
