--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "cypress": "^14.0.0",
+    "cypress-image-diff-html-report": "^2.2.0",
+    "cypress-image-diff-js": "^2.3.0",
     "eslint": "^9",
     "eslint-config-next": "15.1.2",
     "sass": "^1.83.0",
